--- a/dl_tuto_1.ipynb
+++ b/dl_tuto_1.ipynb
@@ -52,6 +52,21 @@
     },
     {
       "metadata": {
+        "id": "-EpK9nwLho4e",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Conventions\n",
+        "Il est probable, que de temps en temps, notamment dans les premiers tutoriels, vous rencontriez des expressions, des termes, des noms d'outils que vous ne connaissez pas. \n",
+        "\n",
+        "Ceux-ci sont généralement expliqués et commentés, sur mon site http://intelligence-artificielle.agency/ \n",
+        "\n",
+        "Par exemple, je ne décris pas Anaconda dans mes tutoriels car c'est inutile avec Colaboratory mais je le présente sur mon [site](http://intelligence-artificielle.agency/lexique/). "
+      ]
+    },
+    {
+      "metadata": {
         "id": "ABmbkXDkYZLE",
         "colab_type": "text"
       },
@@ -68,9 +83,19 @@
         "###Environnement\n",
         "Soit vous utilisez [Google Colaboratory,](https://colab.research.google.com/notebooks/welcome.ipynb) ce que je recommande fortement puisqu'ill vous permet d'écrire et d'exécuter du code, de le sauvegarder et le partager gratuitement, depuis votre navigateur. \n",
         "\n",
-        "Colab utilise Jupyter (ce que je fais systématiquement) et vous permet, cerise sur le gâteau, de bénéficier gratuitement de GPU et même TPU.\n",
+        "Colab utilise [Jupyter](https://jupyter.org) (ce que je fais systématiquement) et vous permet, cerise sur le gâteau, de bénéficier gratuitement de GPU et même TPU.\n",
         "\n",
         "Mais si pour une raison que j'ignore, vous préférez travaillez en local ou avec d'autres ressources, alors installez [Anaconda](http://intelligence-artificielle.agency/anaconda/)."
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Xg0fDGmLhnTn",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# Nouvelle section"
       ]
     },
     {
