--- a/dl_tuto_1.ipynb
+++ b/dl_tuto_1.ipynb
@@ -80,12 +80,14 @@
         "\n",
         "Vous trouverez ici quelques [ressources](https://forums.fast.ai/t/recommended-python-learning-resources/26888). \n",
         "\n",
+        "Pour ne pas être exclusif à Google et fastai, notez qu'il y a aussi de très bons tutoriels chez [Microsoft Azure](https://notebooks.azure.com/#).\n",
+        "\n",
         "###Environnement\n",
         "Soit vous utilisez [Google Colaboratory,](https://colab.research.google.com/notebooks/welcome.ipynb) ce que je recommande fortement puisqu'ill vous permet d'écrire et d'exécuter du code, de le sauvegarder et le partager gratuitement, depuis votre navigateur. \n",
         "\n",
         "Colab utilise [Jupyter](https://jupyter.org) (ce que je fais systématiquement) et vous permet, cerise sur le gâteau, de bénéficier gratuitement de GPU et même TPU.\n",
         "\n",
-        "Mais si pour une raison que j'ignore, vous préférez travaillez en local ou avec d'autres ressources, alors installez [Anaconda](http://intelligence-artificielle.agency/anaconda/)."
+        "Mais si pour une raison que j'ignore, vous préférez travaillez en local ou avec d'autres [ressources](http://intelligence-artificielle.agency/le-cloud-pour-le-deep-learning/), alors installez [Anaconda](http://intelligence-artificielle.agency/anaconda/)."
       ]
     },
     {
@@ -95,7 +97,12 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Nouvelle section"
+        "## CPU / GPU\n",
+        "Difficile de se former sérieusement au DL sans utiliser au minimum des GPU (graphical processing units) au lieu de CPU (computing processing units). Avec Colab, vous pouvez même disposer de TPU (Tensor Processing Unit)\n",
+        "\n",
+        "Les GPU sont, la plupart du temps, ceux de [NVIDIA](https://www.nvidia.com/fr-fr/about-nvidia/ai-computing/). Ils utilisent l’architecture de traitement parallèle [CUDA](https://www.nvidia.fr/object/cuda-parallel-computing-fr.html).\n",
+        "\n",
+        "Pour ceux qui veulent savoir pourquoi les GPU sont plus performants que les CPU, c'est [ici](https://www.quora.com/Why-are-GPUs-well-suited-to-deep-learning). Le résumé est que les GPU sont meilleurs que les CPU pour faire du calcul matriciel, or c'est l'essentiel des calculs en DL."
       ]
     },
     {
