--- a/dl_tuto_1.ipynb
+++ b/dl_tuto_1.ipynb
@@ -76,11 +76,11 @@
         "###Python 3\n",
         "\n",
         "Il faut savoir coder, de préférence en Python et encore mieux avec Python 3.\n",
-        "Si vous ne le savez pas, mais que vous connaissez un autre langage de programmation, alors vous pourrez (peut-être) suivre ces tutoriels, mais vous devrez alors, de temps en temps, vous former à quelques aspects spécifiques du langage.\n",
+        "Si vous ne le savez pas, mais que vous connaissez un autre langage de programmation, alors vous pourrez (peut-être) suivre ces tutoriels, mais vous devrez probablement, de temps en temps, vous former à quelques aspects spécifiques du langage.\n",
         "\n",
         "Vous trouverez ici quelques [ressources](https://forums.fast.ai/t/recommended-python-learning-resources/26888). \n",
         "\n",
-        "Pour ne pas être exclusif à Google et fastai, notez qu'il y a aussi de très bons tutoriels chez [Microsoft Azure](https://notebooks.azure.com/#).\n",
+        "Pour ne pas être exclusif à Google et fastai, notez qu'il y a aussi de très bons tutoriels Python chez [Microsoft Azure](https://notebooks.azure.com/#).\n",
         "\n",
         "###Environnement\n",
         "Soit vous utilisez [Google Colaboratory,](https://colab.research.google.com/notebooks/welcome.ipynb) ce que je recommande fortement puisqu'ill vous permet d'écrire et d'exécuter du code, de le sauvegarder et le partager gratuitement, depuis votre navigateur. \n",
@@ -97,12 +97,24 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## CPU / GPU\n",
+        "## CPU / GPU / TPU\n",
         "Difficile de se former sérieusement au DL sans utiliser au minimum des GPU (graphical processing units) au lieu de CPU (computing processing units). Avec Colab, vous pouvez même disposer de TPU (Tensor Processing Unit)\n",
         "\n",
         "Les GPU sont, la plupart du temps, ceux de [NVIDIA](https://www.nvidia.com/fr-fr/about-nvidia/ai-computing/). Ils utilisent l’architecture de traitement parallèle [CUDA](https://www.nvidia.fr/object/cuda-parallel-computing-fr.html).\n",
         "\n",
-        "Pour ceux qui veulent savoir pourquoi les GPU sont plus performants que les CPU, c'est [ici](https://www.quora.com/Why-are-GPUs-well-suited-to-deep-learning). Le résumé est que les GPU sont meilleurs que les CPU pour faire du calcul matriciel, or c'est l'essentiel des calculs en DL."
+        "Pour ceux qui veulent savoir pourquoi les GPU sont plus performants que les CPU, c'est [ici](https://www.quora.com/Why-are-GPUs-well-suited-to-deep-learning). Le résumé est que les GPU sont meilleurs que les CPU pour faire du calcul matriciel, or c'est l'essentiel des calculs en DL et pour ceux qui s'intéressent aux TPU, c'est [ici](https://cloud.google.com/blog/products/ai-machine-learning/what-makes-tpus-fine-tuned-for-deep-learning). \n",
+        "\n",
+        "Lorsque vous exécutez un notebook sous Colab, n'oubliez pas de modifier le type d'exécution en GPU (ou TPU) : <font color=\"INDIANRED\">Exécution/Modifier le type d'exécution/GPU</font>."
+      ]
+    },
+    {
+      "metadata": {
+        "id": "KBE_sPyhrHd_",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        ""
       ]
     },
     {
