--- a/dl_tuto_1.ipynb
+++ b/dl_tuto_1.ipynb
@@ -87,7 +87,10 @@
         "\n",
         "Colab utilise [Jupyter](https://jupyter.org) (ce que je fais systématiquement) et vous permet, cerise sur le gâteau, de bénéficier gratuitement de GPU et même TPU.\n",
         "\n",
-        "Mais si pour une raison que j'ignore, vous préférez travaillez en local ou avec d'autres [ressources](http://intelligence-artificielle.agency/le-cloud-pour-le-deep-learning/), alors installez [Anaconda](http://intelligence-artificielle.agency/anaconda/)."
+        "Mais si pour une raison que j'ignore, vous préférez travaillez en local ou avec d'autres [ressources](http://intelligence-artificielle.agency/le-cloud-pour-le-deep-learning/), alors installez [Anaconda](http://intelligence-artificielle.agency/anaconda/).\n",
+        "\n",
+        "###Packages\n",
+        "J'utilise de nombreux packages Python, ceux qui sont relatifs à la Data Science. Parmi ceux-là, [NumPy](https://www.numpy.org), [Pandas](https://pandas.pydata.org), [Matplotlib](https://matplotlib.org), [Scikit-Learn](https://scikit-learn.org/stable/).\n"
       ]
     },
     {
