--- a/dl_tuto_1.ipynb
+++ b/dl_tuto_1.ipynb
@@ -121,7 +121,7 @@
         "\n",
         "Le choix le plus difficile à faire est celui du framework, c'est à dire de l'outil d'apprentissage automatique. \n",
         "\n",
-        "Faut-il choisir TensorFlow, Pytorch, CNTK, Mxnet, Caffe2, … Gluon, Keras, fastai, ... \n",
+        "Faut-il choisir TensorFlow, PyTorch, CNTK, Mxnet, Caffe2, … Gluon, Keras, fastai, ... \n",
         "\n",
         "Mes critères de choix sont les suivants : \n",
         "\n",
@@ -131,13 +131,15 @@
         "4.   il doit être bien documenté\n",
         "5.   il doit supporter CUDA\n",
         "\n",
-        "A partir de ces critères, il reste deux choix importants : TensorFlow et Pytorch.\n",
+        "A partir de ces critères, il reste deux choix importants : TensorFlow et PyTorch.\n",
         "Les deux avantages principaux de TensorFlow sont :\n",
         "\n",
         "1.   sa très forte communauté, bien supérieure à celle de Pytorch,\n",
         "2.   et le support de Keras\n",
         "\n",
-        "La force de PyTorch est fastai car ce sont les meilleurs cours en ligne gratuits sur le DL.\n"
+        "La force de PyTorch est fastai car ce sont les meilleurs cours en ligne gratuits sur le DL.\n",
+        "\n",
+        "Devant l'impossibilité de faire un choix radical, j'utiliserai les deux : [TensorFlow](https://www.tensorflow.org) avec [Keras](https://keras.io) et [PyTorch](https://pytorch.org) avec [fastai](https://www.fast.ai).\n"
       ]
     },
     {
