--- a/dl_tuto_1.ipynb
+++ b/dl_tuto_1.ipynb
@@ -107,7 +107,7 @@
         "\n",
         "Pour ceux qui veulent savoir pourquoi les GPU sont plus performants que les CPU, c'est [ici](https://www.quora.com/Why-are-GPUs-well-suited-to-deep-learning). Le résumé est que les GPU sont meilleurs que les CPU pour faire du calcul matriciel, or c'est l'essentiel des calculs en DL et pour ceux qui s'intéressent aux TPU, c'est [ici](https://cloud.google.com/blog/products/ai-machine-learning/what-makes-tpus-fine-tuned-for-deep-learning). \n",
         "\n",
-        "Lorsque vous exécutez un notebook sous Colab, n'oubliez pas de modifier le type d'exécution en GPU (ou TPU) : <font color=\"INDIANRED\">Exécution/Modifier le type d'exécution/GPU</font>."
+        "Lorsque vous exécutez un notebook sous Colab, n'oubliez pas de modifier le type d'exécution en GPU (ou TPU) :  *Exécution/Modifier le type d'exécution/GPU*"
       ]
     },
     {
@@ -123,7 +123,7 @@
         "\n",
         "Faut-il choisir TensorFlow, PyTorch, CNTK, Mxnet, Caffe2, … Gluon, Keras, fastai, ... \n",
         "\n",
-        "Mes critères de choix sont les suivants : \n",
+        "Mes critères de [choix](https://en.wikipedia.org/wiki/Comparison_of_deep-learning_software) sont les suivants : \n",
         "\n",
         "1.   l'outil doit-être Open Source\n",
         "2.   il doit disposer d'une API Python\n",
@@ -144,7 +144,7 @@
     },
     {
       "metadata": {
-        "id": "LkL6EHR7XEuB",
+        "id": "sw5GfcekEPW2",
         "colab_type": "code",
         "colab": {}
       },
