--- a/dl_tuto_1_0_notebook_tutorial.ipynb
+++ b/dl_tuto_1_0_notebook_tutorial.ipynb
@@ -9,10 +9,10 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    }
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -27,24 +27,12 @@
     },
     {
       "metadata": {
-        "id": "IMEmP7FL0IWe",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "**Important note:** You should always work on a duplicate of the course notebook. On the page you used to open this, tick the box next to the name of the notebook and click duplicate to easily create a new version of this notebook.\n",
-        "\n",
-        "You will get errors each time you try to update your course repository if you don't do this, and your changes will end up being erased by the original course version."
-      ]
-    },
-    {
-      "metadata": {
         "id": "myOVOz5i0IWi",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "# Welcome to Jupyter Notebooks!"
+        "# Bienvenue à Jupyter Notebooks!"
       ]
     },
     {
@@ -54,17 +42,27 @@
       },
       "cell_type": "markdown",
       "source": [
-        "If you want to learn how to use this tool you've come to the right place. This article will teach you all you need to know to use Jupyter Notebooks effectively. You only need to go through Section 1 to learn the basics and you can go into Section 2 if you want to further increase your productivity."
+        "[Jupyter Notebook](https://jupyter.org) est une application Web qui permet de créer et partager des documents qui contiennent du code. \n",
+        "\n",
+        "Ce code peut être exécuté de façon interactive. \n",
+        "Toutes les leçons présentées sur notre site, lorsqu'il s'agit de code, doivent être lues dans des notebooks. \n",
+        "\n",
+        "Vous avez plusieurs options pour lire les cours, c'est à dire les notebooks :\n",
+        "- soit directement sur le site [deep-learning.website](https://www.deep-learning.website) car il y a un embed des gist \n",
+        "- soit avec Google Colaboratory \n",
+        "- soit avec le nbviewer de Jupyter\n",
+        "\n",
+        "Le plus simple est avec Google Colaboratory."
       ]
     },
     {
       "metadata": {
-        "id": "VGL4gLAY0IWn",
+        "id": "bKEoHJ5749UZ",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "You might be reading this tutorial in a web page (maybe Github or the course's webpage). We strongly suggest to read this tutorial in a (yes, you guessed it) Jupyter Notebook. This way you will be able to actually *try* the different commands we will introduce here."
+        "Ce cours, reprend la lesson 0_notebook_tutorial.ipynb de  [fastai](https://course.fast.ai/videos/?lesson=1), @[jeremyphoward](https://twitter.com/jeremyphoward)"
       ]
     },
     {
@@ -74,7 +72,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Section 1: Need to Know"
+        "## Section 1: le b.a.-ba "
       ]
     },
     {
@@ -94,21 +92,29 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Let's build up from the basics, what is a Jupyter Notebook? Well, you are reading one. It is a document made of cells. You can write like I am writing now (markdown cells) or you can perform calculations in Python (code cells) and run them like this:"
+        "La documentation de Jupyter Notebook est [ici](https://jupyter-notebook.readthedocs.io/en/stable/). L'essentiel à savoir est qu'il existe des cellules de différents types (code, texte, en-tête de section). Les 2 derniers types étant similaires.\n",
+        "\n",
+        "Pour exécuter une cellule de code, il faut faire Shift+Enter. \n",
+        "Si vous êtes perdu(e), il y a la Palette de Commandes dans Outils, ou l'Aide.\n",
+        "\n",
+        "Par exemple : "
       ]
     },
     {
       "metadata": {
         "id": "_T2C44PO0IWv",
         "colab_type": "code",
-        "outputId": "a7743d3c-ec30-4668-e8b9-950fe47355b0",
-        "colab": {}
+        "outputId": "1efb72e2-3159-4733-a440-fa85f35ecb8e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "cell_type": "code",
       "source": [
         "1+1"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -120,7 +126,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 0
+          "execution_count": 3
         }
       ]
     },
@@ -131,9 +137,13 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Cool huh? This combination of prose and code makes Jupyter Notebook ideal for experimentation: we can see the rationale for each experiment, the code and the results in one comprehensive document. In fast.ai, each lesson is documented in a notebook and you can later use that notebook to experiment yourself. \n",
+        "Si la documentation ne vous suffit pas, il y a des livres sur Jupyter.\n",
         "\n",
-        "Other renowned institutions in academy and industry use Jupyter Notebook: Google, Microsoft, IBM, Bloomberg, Berkeley and NASA among others. Even Nobel-winning economists [use Jupyter Notebooks](https://paulromer.net/jupyter-mathematica-and-the-future-of-the-research-paper/)  for their experiments and some suggest that Jupyter Notebooks will be the [new format for research papers](https://www.theatlantic.com/science/archive/2018/04/the-scientific-paper-is-obsolete/556676/)."
+        "Par exemple : \n",
+        "- Beginning Data Science with Python and Jupyter de Alex Galea (2018)\n",
+        "- Jupyter Cookbook de Dan Toomey (2018)\n",
+        "\n",
+        "Mais il n'est pas sûr qu'il soit très utile de lire un livre pour apprendre Jupyter car c'est quand même très facile...\n"
       ]
     },
     {
@@ -143,7 +153,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### Writing"
+        "### Ecrire"
       ]
     },
     {
@@ -153,120 +163,9 @@
       },
       "cell_type": "markdown",
       "source": [
-        "A type of cell in which you can write like this is called _Markdown_. [_Markdown_](https://en.wikipedia.org/wiki/Markdown) is a very popular markup language. To specify that a cell is _Markdown_ you need to click in the drop-down menu in the toolbar and select _Markdown_."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "gKv1ySa50IXA",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "Click on the the '+' button on the left and select _Markdown_ from the toolbar."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "jvKyFB2a0IXD",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "Now you can type your first _Markdown_ cell. Write 'My first markdown cell' and press run."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "ltsQ8Ynk0IXF",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "![add](https://github.com/fastai/course-v3/blob/master/nbs/dl1/images/notebook_tutorial/add.png?raw=1)"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "u7mZLI7B0IXG",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "You should see something like this:"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "xGYM2RHY0IXI",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "My first markdown cell"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "xpemEgL40IXL",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "Now try making your first _Code_ cell: follow the same steps as before but don't change the cell type (when you add a cell its default type is _Code_). Type something like 3/2. You should see '1.5' as output."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "uIv6tz-Y0IXM",
-        "colab_type": "code",
-        "outputId": "0c6913ec-26cf-4845-ca67-fc5c10bcf36b",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "3/2"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1.5"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 0
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "o_0aJlYG0IXV",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "### Modes"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "nC_rQLp40IXX",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "If you made a mistake in your *Markdown* cell and you have already ran it, you will notice that you cannot edit it just by clicking on it. This is because you are in **Command Mode**. Jupyter Notebooks have two distinct modes:\n",
+        "Depuis la création du tuto  0_notebook_tutorial de fastai, les menus Jupyter ont été légèrement modifiés. Il est toujours possible de code avec le [Markdown](https://daringfireball.net/projects/markdown/) mais l'intérêt est limité.\n",
         "\n",
-        "1. **Edit Mode**: Allows you to edit a cell's content.\n",
-        "\n",
-        "2. **Command Mode**: Allows you to edit the notebook as a whole and use keyboard shortcuts but not edit a cell's content. \n",
-        "\n",
-        "You can toggle between these two by either pressing <kbd>ESC</kbd> and <kbd>Enter</kbd> or clicking outside a cell or inside it (you need to double click if its a Markdown cell). You can always know which mode you're on since the current cell has a green border if in **Edit Mode** and a blue border in **Command Mode**. Try it!"
+        "Notez que vous pouvez mettre du Html dans vos cellules de type Text mais qu'il n'est pas garanti que pour du code un peu complexe, celui-ci soit repris dans vos Gists GitHub."
       ]
     },
     {
@@ -276,7 +175,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### Other Important Considerations"
+        "### Autres Considerations Importantes"
       ]
     },
     {
@@ -286,87 +185,9 @@
       },
       "cell_type": "markdown",
       "source": [
-        "1. Your notebook is autosaved every 120 seconds. If you want to manually save it you can just press the save button on the upper left corner or press <kbd>s</kbd> in **Command Mode**."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "Q2-_9aSt0IXb",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "![Save](https://github.com/fastai/course-v3/blob/master/nbs/dl1/images/notebook_tutorial/save.png?raw=1)"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "HH7B_Kk70IXc",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "2. To know if your kernel is computing or not you can check the dot in your upper right corner. If the dot is full, it means that the kernel is working. If not, it is idle. You can place the mouse on it and see the state of the kernel be displayed."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "rluUqDMu0IXe",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "![Busy](https://github.com/fastai/course-v3/blob/master/nbs/dl1/images/notebook_tutorial/busy.png?raw=1)"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "OxMmSeGR0IXf",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "3. There are a couple of shortcuts you must know about which we use **all** the time (always in **Command Mode**). These are:\n",
+        "Le noteboook est sauvé toutes les120 seconds par défaut. \n",
         "\n",
-        "<kbd>Shift</kbd>+<kbd>Enter</kbd>: Runs the code or markdown on a cell\n",
-        "\n",
-        "<kbd>Up Arrow</kbd>+<kbd>Down Arrow</kbd>: Toggle across cells\n",
-        "\n",
-        "<kbd>b</kbd>: Create new cell\n",
-        "\n",
-        "<kbd>0</kbd>+<kbd>0</kbd>: Reset Kernel\n",
-        "\n",
-        "You can find more shortcuts in the Shortcuts section below."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "ho_9E8d70IXg",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "4. You may need to use a terminal in a Jupyter Notebook environment (for example to git pull on a repository). That is very easy to do, just press 'New' in your Home directory and 'Terminal'. Don't know how to use the Terminal? We made a tutorial for that as well. You can find it [here](https://course.fast.ai/terminal_tutorial.html)."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "vM_dwEls0IXi",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "![Terminal](https://github.com/fastai/course-v3/blob/master/nbs/dl1/images/notebook_tutorial/terminal.png?raw=1)"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "VhpIXOOK0IXi",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "That's it. This is all you need to know to use Jupyter Notebooks. That said, we have more tips and tricks below ↓↓↓"
+        "Pour enregistrer (si vous utilisez Colab) vous pouvez le faire dans votre Drive, dans un Gist ou sous Github."
       ]
     },
     {
